Fixing overflow on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -14,13 +14,15 @@ body {
 
 .App {
   margin: 0;
-  overflow: auto;
+  overflow-x: hidden;
   background-color: #121212;
   display: block;
   padding-left: 7%;
   padding-right: 7%;
   scroll-behavior: smooth;
   scrollbar-color: #121212;
+  width: 101.9%;
+  box-sizing: border-box;
 }
 
 /* Navitation bar */
